feat(web): hide memos tab for guest users
